0029394: IESample contains strange STEP reading code

All STEP roots are transferred first and then all shapes are read.
The resulting sequence is not discarded and recreated.